--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "sweetalert2": "^11.22.5",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
